Moving Shared Resources to other module

--- a/WarehouseShared/build.properties
+++ b/WarehouseShared/build.properties
@@ -3,5 +3,6 @@ bin.includes = .,\
                META-INF/,\
                Processes/,\
                Resources/,\
+               Service Descriptors/,\
                Schemas/,\
-               Service Descriptors/
+               .WebResources/
