--- a/WarehouseShared/.config
+++ b/WarehouseShared/.config
@@ -8,10 +8,10 @@
   <config:assetTypes id="com.tibco.xpd.asset.wsdl"/>
   <config:assetTypes id="com.tibco.amx.zion.resource.asset"/>
   <config:specialFolders>
-    <config:folder id="_NPH2kG94EeaKsLT5oOlt2w" kind="com.tibco.amx.zion.schema" location="Schemas"/>
     <config:folder id="_NPRnkG94EeaKsLT5oOlt2w" kind="com.tibco.bw.process.folder" location="Processes"/>
     <config:folder id="_NPS1sG94EeaKsLT5oOlt2w" kind="wsdl" location="Service Descriptors"/>
     <config:folder id="_NPUD0G94EeaKsLT5oOlt2w" kind="com.tibco.amx.zion.resource" location="Resources"/>
     <config:folder id="_NVyfQG94EeaKsLT5oOlt2w" kind="com.tibco.bw.module.folder" location="META-INF"/>
+    <config:folder id="_U9jscG95EeawpelNRFlLZg" kind="com.tibco.amx.zion.schema" location="Schemas"/>
   </config:specialFolders>
 </config:ProjectConfig>
